# claudex

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: ci.yml  pr-validate.yml  release.yml
claudex/: __main__.py  cli.py  compiler.py  copier.py  detectors.py  generator.py  layer_configs.py  validator.py
claudex/templates/project/: settings.json
claudex/templates/project/agents/: implementers.yml  orchestrator.md  verifiers.yml
claudex/templates/project/commands/: context-handoff.md  create-spec.md  implement-spec.md  new-spec.md  orchestrate.md
claudex/templates/project/hooks/: post-tool-use.py  pre-compact.py  pre-tool-use.py  session-end.py  session-start.py  stop-lint-check.py  token-budget.py
claudex/templates/project/session/: CONTEXT_SUMMARY.md  CURRENT_TASK.md  TASK_PROGRESS.md  TOKEN_LOG.md  VALIDATION_STATE.md
docs/: DESIGN.md
tests/: test_cli.py  test_cli_integration.py  test_compiler.py  test_copier.py  test_detectors.py  test_generator.py  test_layer_configs.py  test_validator.py
tests/fixtures/django_project/: manage.py
