[project]
name = "claudex"
version = "1.0.0"
description = "Set up Claude Code for any project in one command"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []
keywords = [
    "claude",
    "claude-code",
    "ai",
    "developer-tools",
    "code-generation",
    "project-setup",
    "fastapi",
    "django",
    "nextjs",
]
authors = [
    {name = "Binx808", email = "smarttype@gmail.com"},
]
maintainers = [
    {name = "Binx808", email = "smarttype@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
claudex = "claudex.cli:main"

[project.urls]
Homepage = "https://github.com/BinxAI/claudex"
Repository = "https://github.com/BinxAI/claudex"
Issues = "https://github.com/BinxAI/claudex/issues"
Documentation = "https://github.com/BinxAI/claudex#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claudex*"]

[tool.setuptools.package-data]
claudex = [
    "templates/**/*",
    "presets/**/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
